--- a/src/app/features/attendance/marking/attendance-marking.component.html
+++ b/src/app/features/attendance/marking/attendance-marking.component.html
@@ -4,8 +4,8 @@
       <mat-icon>arrow_back</mat-icon>
     </button>
     <div class="header-info">
-      <h2>{{ classCode() }} - {{ 'ATTENDANCE.LESSON' | translate }} {{ lessonNumber() }}</h2>
-      <p class="subtitle">{{ subjectName() }} | {{ date() }}</p>
+      <h2>{{ 'ATTENDANCE.LESSON' | translate }} {{ lessonNumber() }} - {{ subjectName() }}</h2>
+      <p class="subtitle">{{ classCode() }} | {{ date() }}</p>
     </div>
   </div>
 
